Fixed margin on small element

--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,7 @@ li {
 a {
   color: #000;
 }
+
+small {
+  margin: -10px;
+}
